<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Canine Care</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_legal_notices">Legal Notices</string>
    <string name="splash">Developed By</string>
    <string name="intro">Enter your Twitter search term</string>
    <string name="hint">Enter Search Term</string>
    <string name="search_label">Search</string>
    <string name="placeholder">-----</string>
   

    <string-array name="place_type">
        <item>veterinary_care</item>
        <item>pet_store</item>
    </string-array>
    <string-array name="place_type_name">
        <item>Vet Clinics</item>
        <item>Pet Stores</item>
    </string-array>
    <string name="str_btn_find">Find</string>
    
    <string-array name="map_opts">
        <item>Normal</item>
        <item>Satellite</item>
        <item>Hybrid</item>
        <item>Terrain</item>
    </string-array>
    
    <string name="ok_string">OK</string>
   
    
    <string name="i1">Toxins</string>
    <string name="i2">Map</string>
    <string name="i3">Videos</string>
    <string name="i4">Developer Info</string>
     <string name="legal">Map Legal Notices</string>
    <string name="i6">Sponsors/Ads</string>
    <string name="i7">Search Twitter</string>
    
    <string name="lst_img">List Image</string>
    <string name="d_img">Details Image</string>
    
    <string name="map_test">The Map stuff will go here!</string>
    <string name="vid_test">The Videos stuff will go here!</string>
    <string name="dev_test">Dev Info stuff will go here!</string>
    <string name="details">Details from list</string>
    
    
    <string name="sym">Symptoms:</string>
    <string name="sym_det">details</string>
    <string name="descr">Description:</string>
    <string name="desc_det">Details</string>
    <string name="more">Click here to View More Images</string>
    <string name="more_img">View More Images</string>
    
				    <string name="vid_1">Review basic information in the care of your best friend.</string>
				    <string name="vid_2">Learn how to administer a pill to your pet.</string>
				    <string name="vid_3">Watch a demonstration of how to apply flea prevention</string>
				    <string name="vid_4">Review information of the process of a surgery.</string>
				    
				    <string name="b_1">Go to Care Video</string>
				    <string name="b_2">Go to Pill Video</string>
				    <string name="b_3">Go to flea prevent Video</string>
				    <string name="b_4">Go to Surgery Video</string>
    
    
    <string name="dev">Developer Info</string>
    <string name="dev_det">Vet Tech Development is committed to informing dog owners of toxicity to better inform and prepare the owner to handle a toxicity related issue. It is recommended to view this application prior to any emergency situation.</string>
    <string name="dev_web">Please Visit Our Website</string>
    <string name="to_web">Click to Visit Site</string>
    <string name="dev_con_string">Developer Name</string>
    <string name="dev_contact">Luis Puente \n \nCanine Care 2013</string>
    
    <string name="cont1">Content Description1</string>
    
    <string name="my_info">Luis Puente\nFullSail\nAPD2\n1304</string>
    <string name="music_off">Turn Music OFF</string>
    
</resources>