<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
  
    
    <item android:id="@+id/item1"
        android:title="@string/i1"
        android:orderInCategory="1"
        android:icon="@drawable/icon_list"
        android:showAsAction="always"/>
    
    <item android:id="@+id/item2"
        android:title="@string/i2"
        android:orderInCategory="2"
         android:icon="@drawable/icon_map"
        android:showAsAction="always"/>
    
    <item android:id="@+id/item3"
        android:title="@string/i3"
        android:orderInCategory="3"
         android:icon="@drawable/icon_video"
        android:showAsAction="always"/>
   
 	<item android:id="@+id/item4"
        android:title="@string/i4"
        android:orderInCategory="4"
        android:showAsAction="never"/>
 	
 	 <item
        android:id="@+id/item5"
        android:orderInCategory="5"
        android:showAsAction="never"
        android:title="@string/legal"/>
 	
 	<item android:id="@+id/item6"
        android:title="@string/i6"
        android:orderInCategory="6"
        android:showAsAction="never"/>
 	
 	<item android:id="@+id/item7"
        android:title="@string/i7"
        android:orderInCategory="7"
        android:showAsAction="never"/>

</menu>