<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".TwitterSearch" >
    
    <TextView
        android:id="@+id/intro_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/intro"
        android:textColor="#FFFFFF"
        android:textStyle="italic"
        android:textSize="15sp" />
    
    <EditText
        android:id="@+id/search_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/hint"
        android:layout_below="@+id/intro_txt"
        android:padding="10dp"
        android:background="#70DBDB"
        android:layout_margin="3dp"
		/>
    
	    <Button
	        android:id="@+id/search_btn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/search_edit"
	        android:layout_centerHorizontal="true"
	        android:layout_margin="3dp"
	        android:onClick="searchTwitter"
	        android:text="@string/search_label"
	        android:textColor="#FFFFFF"
	        android:textSize="25sp" />
    
	    <ScrollView
		    
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:layout_below="@+id/search_btn">
		    
	        <TextView
	            android:id="@+id/tweet_txt"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="top|center"
	            android:layout_margin="2dp"
	            android:background="#330000"
	            android:freezesText="true"
	            android:padding="15dp"
	            android:text="@string/placeholder"
	            android:textColor="#ffffff"
	            android:textSize="18sp" />
	        
		</ScrollView>
		
</RelativeLayout>